--- a/MVVMApps/MVVMApps/Views/CoffeeEquipmentPage.xaml
+++ b/MVVMApps/MVVMApps/Views/CoffeeEquipmentPage.xaml
@@ -1,7 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="MVVMApps.Views.CoffeeEquipmentPage">
+             x:Class="MVVMApps.Views.CoffeeEquipmentPage"
+             xmlns:viewmodels="clr-namespace:MVVMApps.ViewModels">
+    <ContentPage.BindingContext>
+        <viewmodels:CoffeeEquipmentViewModel />
+    </ContentPage.BindingContext>
     <Grid RowDefinitions="*,Auto,Auto,*">
         <Label Grid.Row="1" HorizontalOptions="Center"
                FontSize="Large" Text="{Binding CountDisplay}" />
