--- a/MVVMApps/MVVMApps/Views/CoffeeEquipmentPage.xaml
+++ b/MVVMApps/MVVMApps/Views/CoffeeEquipmentPage.xaml
@@ -2,13 +2,15 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="MVVMApps.Views.CoffeeEquipmentPage"
-             xmlns:viewmodels="clr-namespace:MVVMApps.ViewModels">
+             xmlns:viewmodels="clr-namespace:MVVMApps.ViewModels" 
+             Title="{Binding Title}">
     <ContentPage.BindingContext>
         <viewmodels:CoffeeEquipmentViewModel />
     </ContentPage.BindingContext>
     <StackLayout>
-        <ListView BackgroundColor="Transparent" ItemsSource="{Binding Coffee}"
-                  HasUnevenRows="True" SeparatorVisibility="None">
+        <ListView BackgroundColor="Transparent" ItemsSource="{Binding CoffeeGroups}"
+                  HasUnevenRows="True" SeparatorVisibility="None"
+                  IsGroupingEnabled="True" GroupDisplayBinding="{Binding Key}">
             <ListView.ItemTemplate>
                 <DataTemplate>
                     <ViewCell>
@@ -30,7 +32,7 @@
             </ListView.ItemTemplate>
             <ListView.Header>
                 <StackLayout Orientation="Horizontal">
-                    <Label HorizontalOptions="Center" Text="Coffee of the World" />
+                    <Label HorizontalOptions="Center" FontSize="Medium" Text="Coffee of the World" />
                 </StackLayout>
             </ListView.Header>
             <ListView.Footer>
