--- a/MVVMApps/MVVMApps/Views/CoffeeEquipmentPage.xaml
+++ b/MVVMApps/MVVMApps/Views/CoffeeEquipmentPage.xaml
@@ -3,7 +3,8 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="MVVMApps.Views.CoffeeEquipmentPage"
              xmlns:viewmodels="clr-namespace:MVVMApps.ViewModels" 
-             Title="{Binding Title}">
+             Title="{Binding Title}"
+             x:Name="CoffeePage">
     <ContentPage.BindingContext>
         <viewmodels:CoffeeEquipmentViewModel />
     </ContentPage.BindingContext>
@@ -23,6 +24,11 @@
             <ListView.ItemTemplate>
                 <DataTemplate>
                     <ViewCell>
+                        <ViewCell.ContextActions>
+                            <MenuItem Text="Favorite" 
+                                      Command="{Binding Source={x:Reference CoffeePage},Path=BindingContext.FavoriteCommand}"
+                                      CommandParameter="{Binding .}"/>
+                        </ViewCell.ContextActions>
                         <Grid Padding="10">
                             <Frame CornerRadius="20" HasShadow="True">
                                 <StackLayout Orientation="Horizontal">
