--- a/MVVMApps/MVVMApps/Views/CoffeePageSQLite.xaml
+++ b/MVVMApps/MVVMApps/Views/CoffeePageSQLite.xaml
@@ -14,10 +14,10 @@
             <xct:ItemSelectedEventArgsConverter x:Key="ItemSelectedEventArgsConverter" />
         </ResourceDictionary>
     </ContentPage.Resources>
-    <ContentPage.ToolbarItems>
-        <ToolbarItem Text="Add" Order="Secondary" Command="{Binding AddCommand}" />
-    </ContentPage.ToolbarItems>
     <StackLayout>
+        <StackLayout Orientation="Horizontal">
+            <Button Text="Add Coffee" Command="{Binding AddCommand}" />
+        </StackLayout>
         <ListView 
                   BackgroundColor="Transparent" 
                   ItemsSource="{Binding Coffee}"
