--- a/MVVMApps/MVVMApps/Views/DetailCoffeePageSQLite.xaml
+++ b/MVVMApps/MVVMApps/Views/DetailCoffeePageSQLite.xaml
@@ -17,7 +17,11 @@
             <Entry Text="{Binding Name}" />
             <Entry Text="{Binding Roaster}" />
             <Image HorizontalOptions="Center" Source="{Binding Image}" />
-            <Button Text="Done" Command="{Binding DoneCommand}" />
+            <StackLayout Orientation="Horizontal">
+                <Button Text="Edit" Command="{Binding EditCommand}" />
+                <Button Text="Done" Command="{Binding DoneCommand}" />
+            </StackLayout>
+            
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
