--- a/MVVMApps/MVVMApps/Views/CoffeePage.xaml
+++ b/MVVMApps/MVVMApps/Views/CoffeePage.xaml
@@ -8,6 +8,11 @@
     <ContentPage.BindingContext>
         <viewmodels:CoffeeViewModel />
     </ContentPage.BindingContext>
+    <ContentPage.Resources>
+        <ResourceDictionary>
+            <xct:ItemSelectedEventArgsConverter x:Key="ItemSelectedEventArgsConverter" />
+        </ResourceDictionary>
+    </ContentPage.Resources>
     <ContentPage.Behaviors>
         <xct:EventToCommandBehavior EventName="Appearing" Command="{Binding RefreshCommand}" />
     </ContentPage.Behaviors>
@@ -22,6 +27,11 @@
                   IsRefreshing="{Binding IsBusy}"
                   RefreshCommand="{Binding RefreshCommand}"
                   RefreshControlColor="Red">
+                <ListView.Behaviors>
+                    <xct:EventToCommandBehavior EventName="ItemSelected"
+                                                Command="{Binding SelectCommand}"
+                                                EventArgsConverter="{StaticResource ItemSelectedEventArgsConverter}" />
+                </ListView.Behaviors>
                 <ListView.ItemTemplate>
                     <DataTemplate>
                         <ViewCell>
