menambahkan add data

--- a/MVVMApps/MVVMApps/Views/CoffeePage.xaml
+++ b/MVVMApps/MVVMApps/Views/CoffeePage.xaml
@@ -16,6 +16,10 @@
     <ContentPage.Behaviors>
         <xct:EventToCommandBehavior EventName="Appearing" Command="{Binding RefreshCommand}" />
     </ContentPage.Behaviors>
+    <ContentPage.ToolbarItems>
+        <ToolbarItem Text="Add Coffee" Order="Secondary" 
+                     Command="{Binding AddCommand}" />
+    </ContentPage.ToolbarItems>
     <ContentPage.Content>
         <StackLayout>
             <ListView
