--- a/MVVMApps/MVVMApps/Views/CoffeePageSQLite.xaml
+++ b/MVVMApps/MVVMApps/Views/CoffeePageSQLite.xaml
@@ -20,6 +20,7 @@
     <StackLayout>
         <StackLayout Orientation="Horizontal">
             <Button Text="Add Coffee" Command="{Binding AddCommand}" />
+            <Button Text="Sync Data" Command="{Binding SyncCommand}" />
         </StackLayout>
         <ListView
                   BackgroundColor="Transparent" 
